# chapter-marker_v3

./: .envrc  .gitignore  LICENSE  README.md  chunks2text.py  doit-without-rclone.sh  doit.py  doit.sh  doitonjack.sh  fix_input.py  flake.nix  pocketsphinx.nix  recalc-chapters.sh  remote_doit.sh  sandro_doit.sh  shell.nix  speech_recognition.nix  split-voice.py  stft.nix  text2chapters.py  tts2chapters.py
helper/: copy_nextcloud.sh
nix/: flake.nix  pyproject.toml
